[package]
name = "protected-id-derive"
description = "Macro for deriving type-safe Id values"
version = "0.1.0"
edition = "2018"
license-file = "LICENSE"
readme = "README.md"
documentation = "https://docs.rs/protected-id-derive"
homepage = "https://github.com/Anser-TV/protected-id-derive"
repository = "https://github.com/Anser-TV/protected-id-derive"

[dependencies]
quote = "0.3.15"
syn = "0.11.11"

[lib]
proc-macro = true
